<resources>
    <!-- DO NOT TRANSLATE OR CHANGE THIS -->
    <string name="app_name" translatable="false">Common Voice</string>

    <!-- Use the abbreviation of Common Voice (e.g. Italian -> it, Swedish -> sv-SE, ect.) -->
    <string name="language">en</string>

    <!-- Buttons (nav) -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <!-- Home (main) -->
    <string name="description_cv_robot">Common Voice logo</string>
    <string name="description_cv_logo">Common Voice robot</string>
    <string name="button_home_login">Login / Sign up</string>
    <string name="button_home_logout">Log out</string>
    <string name="button_home_profile">Profile</string>
    <string name="text_hi_username">Hi</string>
    <!-- Dashboard -->
    <string name="dashboardStatistics">Statistics</string>
    <string name="dashboardVoicesOnline">Voices online</string>
    <string name="dashboardTabYou">You</string>
    <string name="dashboardTabEveryone">Everyone</string>
    <string name="dashboardToday">Today</string>
    <string name="dashboardEver">Ever</string>
    <string name="toastNoLoginNoStatistics">You have to log-in to see your statistics</string>
    <string name="textHoursAbbreviation">h</string>
    <string name="textHour">Hour</string>
    <!-- Tutorial -->
    <string name="btn_tutorial1">Start</string>
    <string name="btn_tutorial2">Permit</string>
    <string name="btn_tutorial3">Next</string>
    <string name="btn_tutorial4">Try again</string>
    <string name="btn_tutorial5">Finish</string>
    <string name="linkTermsCommonVoice">https://voice.mozilla.org/en/terms</string>
    <string name="tutorial_text1">This is not the official app of Common Voice. It\'s developed by Saverio Morelli without any support or partnership with Mozilla.</string>
    <string name="tutorial_terms">By proceeding, you agree to the Terms of Service of Common Voice.</string>
    <string name="tutorial_text2">Common Voice App needs the \"Microphone\" permission to work correctly.</string>
    <string name="tutorial_text3">Common Voice App needs the \"Storage\" permission to work correctly.</string>
    <string name="tutorial_text4">Choose your native language, it will use to show sentences to record and to validate</string>

    <!-- DO NOT TRANSLATE OR CHANGE THIS - Languages (list) sort "A-Z" - "languages" and "languages_short" sort MUST coincide (e.g. Italian and it, English and en, ect.) -->
    <string-array name="languages" translatable="false">
        <item>Deutsch</item><!-- de -->
        <item>English</item><!-- en -->
        <item>Español</item><!-- es -->
        <item>Français</item><!-- fr -->
        <item>Italiano</item><!-- it -->
        <item>Svenska</item><!-- sv-SE -->
    </string-array>
    <!-- DO NOT TRANSLATE OR CHANGE THIS - Abbreviation of Common Voice (e.g. Italian -> it, Swedish -> sv-SE, ect.) -->
    <string-array name="languages_short" translatable="false">
        <item>de</item>
        <item>en</item>
        <item>es</item>
        <item>fr</item>
        <item>it</item>
        <item>sv-SE</item>
    </string-array>

    <!-- Login -->
    <string name="txt_loading_page">Loading ...</string>
    <string name="txt_profile_username">Username</string>
    <string name="txt_profile_email">Email</string>
    <string name="txt_profile_age">Age</string>
    <string name="txt_profile_gender">Gender</string>
    <string name="txt_profile_edit_data_alert">To modify your profile information, go to official website.</string>
    <string name="txt_login_successful_alert">Login successful!</string>
    <string name="txt_gender_male">Male</string>
    <string name="txt_gender_female">Female</string>
    <string name="txt_gender_other">Other</string>
    <!-- Settings -->
    <string name="btn_open_tutorial_settings">Open Tutorial again</string>
    <string name="txt_project_github_settings">Project open-source on GitHub</string>
    <string name="txt_contributors">main contributors</string>
    <string name="txt_developed_by">developed by</string>
    <string name="toast_language_changed">Language changed correctly to {{*{{lang}}*}}</string>
    <string name="settingsLanguage">Language</string>
    <string name="txt_donate_paypal_settings">Donate to the developer on PayPal</string>
    <!-- Speak & Listen-->
    <string name="txt_loading_sentence">Loading a sentence ...</string>
    <string name="btn_skip_sentence">Skip</string>
    <string name="btn_send_sentence">Send recording</string>
    <string name="txt_loading_clip">Loading a clip ...</string>
    <string name="txt_press_icon_below_speak_1">Press the icon below to start the recording</string>
    <string name="txt_press_icon_below_speak_2">Press the icon below to stop the recording</string>
    <string name="txt_sentence_recorded">Sentence recorded. Listen the recording</string>
    <string name="txt_sentence_record_failed">Recording failed. Try again please</string>
    <string name="txt_recorded_correct_or_wrong">Recording correct? Send it.\nRecording wrong? Record the sentence again</string>
    <string name="txt_listening_stopped">Listen the recording entirely to ensure it\'s correct</string>
    <string name="txt_listening_again_recording">Press the icon below to stop the listening</string>
    <string name="txt_recording_too_long">Recording is too long. Max duration is 10 seconds</string>
    <string name="txt_sending_recording">Sending the recording ...</string>
    <string name="txt_recording_sent">Recording sent!</string>
    <string name="txt_sending_recording_failed">Sending recording failed!</string>
    <string name="txt_sending_recording_failed_and_skip">Sending recording failed! Try again to send it otherwise press {{*{{skip_button}}*}} button</string>
    <string name="txt_press_icon_below_listen_1">Press the icon below to start the clip</string>
    <string name="txt_press_icon_below_listen_2">Press the icon below to stop the clip</string>
    <string name="txt_clip_correct_or_wrong">The clip is correct? Press the Thumb up\nThe clip is wrong? Press the Thumb down</string>
    <string name="txt_clip_again">Press the icon below to start the clip again</string>
    <string name="txt_clip_validated_yes">Clip accepted!</string>
    <string name="txt_clip_validated_no">Clip rejected!</string>
    <string name="txt_error_1_try_again_press_skip">Error. Try again, so press {{*{{skip_button}}*}} button</string>
    <string name="txt_error_2_sending_failed">Error during the sending of the recording. The audio wasn\'t sent to server</string>
    <string name="txt_sending_validation">Sending the validation ...</string>
    <string name="txt_error_3_sending_validation_failed">Error during the sending of the validation. Try again or press {{*{{skip_button}}*}} button</string>
    <string name="txt_closing">Closing ...</string>
    <!-- NoConnection -->
    <string name="btn_check_again_noconnection">Check again</string>
    <string name="txt_noconnection">Internet connection isn\'t available now. Please, connect to WiFi network or mobile data and then press on the button below</string>
    <!-- First-run Speak & Listen -->
    <string name="txt1_tutorial_speak">This is the sentence you must record.</string>
    <string name="txt2_tutorial_speak_and_listen">Here you can find sentences which guide you every time.</string>
    <string name="txt3_tutorial_speak">If you don\'t like the sentence, you can tap on this button to skip and get another one.</string>
    <string name="txt4_tutorial_speak">Tap on this icon to start the recording.</string>
    <string name="txt5_tutorial_speak">Tap on this icon to stop the recording.</string>
    <string name="txt6_tutorial_speak">Tap on this icon to listen the recording.</string>
    <string name="txt7_tutorial_speak">Tap on this icon to record again the sentence, in case there are mistakes in the previous one.</string>
    <string name="txt8_tutorial_speak">Tap on this icon to listen again the recording.</string>
    <string name="txt9_tutorial_speak">Tap on this button to send the recording.</string>
    <string name="txt1_tutorial_listen">This is the sentence/clip you must validate.</string>
    <string name="txt3_tutorial_listen">If you don\'t like the clip, you can tap on this button to skip and get another one.</string>
    <string name="txt4_tutorial_listen">Tap on this icon to play the clip to validate.</string>
    <string name="txt5_tutorial_listen">Tap on this icon to stop the listening of the clip.</string>
    <string name="txt6_tutorial_listen">Tap on this icon if you want to listen again the clip.</string>
    <string name="txt7_tutorial_listen">Tap on this icon if the clip coincides with the sentence, so to accept it.</string>
    <string name="txt8_tutorial_listen">Tap on this icon if the clip doesn\'t coincide with the sentence, so to reject it.</string>
</resources>