<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textDashboardEver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/zillaslab"
        android:text="@string/dashboardEver"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSpeakToday" />

    <View
        android:id="@+id/separatorEverSpeak"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        android:background="#FF505F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEverSpeak" />

    <TextView
        android:id="@+id/textEverListen"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/sourcecodepro"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="..."
        android:textColor="@color/colorBlack"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDashboardEver"
        tools:text="0" />

    <View
        android:id="@+id/separatorEverListen"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginEnd="8dp"
        android:background="#5ACCB8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEverListen" />

    <ImageView
        android:id="@+id/imageEverSpeak"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separatorEverSpeak"
        app:srcCompat="@drawable/speak_cv" />

    <ImageView
        android:id="@+id/imageEverListen"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separatorEverListen"
        app:srcCompat="@drawable/listen_cv" />

    <TextView
        android:id="@+id/textEverSpeak"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sourcecodepro"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="..."
        android:textColor="@color/colorBlack"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDashboardEver"
        tools:text="0" />

    <TextView
        android:id="@+id/textDashboardToday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/zillaslab"
        android:text="@string/dashboardToday"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabDashboard" />

    <TextView
        android:id="@+id/textTodayListen"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sourcecodepro"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="..."
        android:textColor="@color/colorBlack"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDashboardToday"
        tools:text="0" />

    <View
        android:id="@+id/separatorTodaySpeak"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:background="#FF505F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTodaySpeak" />

    <View
        android:id="@+id/separatorTodayListen"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginEnd="16dp"
        android:background="#5ACCB8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTodayListen" />

    <TextView
        android:id="@+id/text_dashboardStatistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/zillaslab"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/dashboardStatistics" />

    <ImageView
        android:id="@+id/imageSpeakToday"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="66dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separatorTodaySpeak"
        app:srcCompat="@drawable/speak_cv" />

    <ImageView
        android:id="@+id/imageTodayListen"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="66dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separatorTodayListen"
        app:srcCompat="@drawable/listen_cv" />

    <TextView
        android:id="@+id/textTodaySpeak"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sourcecodepro"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="..."
        android:textColor="@color/colorBlack"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDashboardToday"
        tools:text="0" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabDashboard"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/colorSelected"
        app:tabIndicatorGravity="bottom"
        app:tabIndicatorHeight="3dp"
        app:tabRippleColor="#FFAAAA"
        app:tabSelectedTextColor="@color/colorSelected"
        app:tabTextColor="@color/colorPrimaryDark"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabDashboardYou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboardTabYou" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabDashboardEveryone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboardTabEveryone" />
    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>