<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollTutorial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutTutorial"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/robot_cv_tutorial"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/description_cv_robot"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/tutorialSectionDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tutorialSectionCVAndroid"
            app:srcCompat="@drawable/robot" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tutorialSectionCVAndroid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bottom_border_radius"
            android:backgroundTint="@color/colorWhite"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textCommonVoiceAndroidTutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/zillaslab"
                android:text="Common Voice Android"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Spinner
            android:id="@+id/languageListTutorial"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/txt_rounded"
            android:gravity="center|center_horizontal|center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:popupBackground="@drawable/txt_rounded"
            android:textAlignment="center"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/tutorialSectionBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="English" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tutorialSectionTerms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/top_bottom_border_radius"
            android:backgroundTint="@color/colorWhite"
            android:padding="20dp"
            app:layout_constraintBottom_toTopOf="@+id/textTutorialMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="gone">

            <TextView
                android:id="@+id/textView_tutorialTerms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:foregroundTint="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/tutorial_terms"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textTutorialMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/top_bottom_border_radius"
            android:backgroundTintMode="screen"
            android:gravity="center|center_horizontal|center_vertical"
            android:padding="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/languageListTutorial"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tutorialSectionBottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/top_border_radius"
            android:backgroundTint="@color/colorWhite"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textSkipTutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:foregroundTint="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="6dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/btn_skip_sentence"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_next" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:text="@string/btn_tutorial1"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SeekBar
                android:id="@+id/seekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="100dp"
                android:layout_height="16dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorBackground"
                android:clickable="false"
                android:focusable="false"
                android:foregroundTint="@color/colorBackground"
                android:indeterminate="false"
                android:indeterminateTint="@color/colorBackground"
                android:max="3"
                android:progress="0"
                android:progressBackgroundTint="@color/colorBackground"
                android:progressTint="@color/colorBackground"
                android:secondaryProgressTint="@color/colorBackground"
                android:thumbTint="@color/colorGray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSkipTutorial"
                app:tickMark="@drawable/tick_mark"
                app:tickMarkTint="@color/colorGray" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tutorialSectionDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/top_bottom_border_radius"
            android:backgroundTint="@color/colorWhite"
            android:padding="20dp"
            app:layout_constraintBottom_toTopOf="@+id/tutorialSectionTerms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView_tutorial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:foregroundTint="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/tutorial_text1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>