<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_listen"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="250dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/listen_cv"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_speak"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="250dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/speak_cv"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/backgound_waves"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/waves" />

        <ImageView
            android:id="@+id/robot_cv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/description_cv_robot"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/backgound_waves"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeSectionLoginSignup"
            app:srcCompat="@drawable/icon_without_background" />

        <ImageView
            android:id="@+id/logo_cv"
            android:layout_width="267dp"
            android:layout_height="63dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="100dp"
            android:contentDescription="@string/description_cv_logo"
            android:scaleType="fitStart"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.892"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_cv" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/homeSectionCVAndroid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bottom_border_radius"
            android:backgroundTint="@color/colorWhite"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Common Voice Android"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/homeSectionLoginSignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/top_bottom_border_radius"
            android:backgroundTint="@color/colorWhite"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeSectionCVAndroid">

            <TextView
                android:id="@+id/textLoggedUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal|center_vertical"
                android:padding="10dp"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="10dp"
                tools:text="Hi, Username!"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded"
                android:text="@string/button_home_login"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textLoggedUsername" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>